# handler/message/create.go
@@ -46,6 +46,6 @@ func (h *Handler) Create(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, &handler.CreateResponse{
-		IsCreated: true,
+		ID: msg.MsgID,
 	})
 }
